Fix issue with counter not being reset for new player searches. Altering the styling as UI on mobile is small and zooming/panning causes conflicts with the slider. Will likely be making some more changes to ensure both Desktop and Mobile UI layout is user friendly.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,7 +15,8 @@ td {
 
 .search {
     margin: 0 auto;
-    width: 50%;
+    width: 100%;
+    padding: 10px;
 }
 
 .main {
